syntax = "proto3";
package svc.example;

option (transformer.go_repo_package) = "model";
option (transformer.go_protobuf_package) = "example";
option (transformer.go_models_file_path) = "example/model/model.go";
option go_package = "example"; // Package name for pb.go

import "options/annotations.proto";
import "protobuf/gogoproto/gogo.proto"; // for gogoproto options
import "google/protobuf/timestamp.proto";

message TheOne{
  oneof the_decl {
    string string_value = 1;
    int64 int64_value = 2;
  }
}

message Product {
  option (transformer.go_struct) = "Product";

  int32 id = 1;
  string name = 2;
  TheOne one = 3;
  TheOne second_id = 4;
}

message Order {
  option (transformer.go_struct) = "Order";

  int64 id = 1;
  TheOne first_id = 2;
  TheOne second_id = 3;
  TheOne third_url = 4;
}

message Address {
  option (transformer.go_struct) = "Address";

  int64 id = 1;
  string type = 2;
}

message Customer {
  option (transformer.go_struct) = "Customer";

  int64 id = 1;
  string name = 2;

  repeated Address addresses = 3;
  Address default_address = 4;
  Address billing_address = 5 [ (gogoproto.nullable) = false ];

  string map_field_1 = 6 [
    (transformer.map_as) = "MapField_1",
    (transformer.map_to) = "MapField1"
  ];
  string map_field_to_without_digits = 7 [ (transformer.map_to) = "MapField2" ];
}


// opposite message order, usage of LineItem is earlier than message is defined.
message LineItemUsage {
  option (transformer.go_struct) = "MyLineItemUsage";

  LineItem Item = 1;
  repeated LineItem List = 2;
}

message LineItem {
  option (transformer.go_struct) = "MyLineItem";

  int64 ID = 1;
  string Type = 2;
  // SomeField will not be added to transformation function.
  string some_field = 3 [ (transformer.skip) = true ];
}

message Value2Pointer {
  option (transformer.go_struct) = "Value2Pointer";

  // In message.pb.go Address field will be of type Address.
  Address address_nil = 1 [ (gogoproto.nullable) = false ];
}

message Pointer2Value {
  option (transformer.go_struct) = "Pointer2Value";

  // In message.pb.go Address field will be of type *Address.
  Address address_not_nil = 1;
}

message SkippedMessageOne {} // skip it because it hasn't transformer.go_struct option.
message SkippedMessageTwo {} // skip it because it hasn't transformer.go_struct option.

message Timer {
  option (transformer.go_struct) = "TimeModel";

  google.protobuf.Timestamp time = 1            [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true, (transformer.map_to) = "TimeTime"];
  google.protobuf.Timestamp ptr_time = 2        [ (gogoproto.nullable) = true, (gogoproto.stdtime) = true, (transformer.map_to) = "PtrTimeTime" ];
  google.protobuf.Timestamp time_to_struct = 3  [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true, (transformer.map_to) = "NullsTime"];
  google.protobuf.Timestamp time_to_struct_ptr = 4  [ (gogoproto.nullable) = true, (gogoproto.stdtime) = true, (transformer.map_to) = "PtrNullsTime" ];

  google.protobuf.Timestamp time_ptr_to_struct = 5  [ (gogoproto.nullable) = true, (gogoproto.stdtime) = true, (transformer.map_to) = "NullsTime2"];
  google.protobuf.Timestamp time_ptr_to_ptr_struct = 6  [ (gogoproto.nullable) = true, (gogoproto.stdtime) = true, (transformer.map_to) = "PtrNullsTime2" ];
}

message Ints {
  option (transformer.go_struct) = "IntsModel";

  int32 int_for_32_value = 1 [ (transformer.map_to) = "IntFor32Value", (transformer.map_as) = "IntFor_32Value" ];
  int64 int_for_64_value = 2 [ (transformer.map_to) = "IntFor64Value", (transformer.map_as) = "IntFor_64Value"];
  int32 int32_value = 3;
  int64 int64_value = 4;
  int64 string_value = 5;
}